Working on the swagger doc
